--- a/templates/base.html
+++ b/templates/base.html
@@ -32,23 +32,23 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container">
         <img id="logo" src="{{ url_for('static', filename='images/logo_white.png') }}" width="100">
-        <a class="navbar-brand" href="{{ url_for('home') }}"><h1>Windhover</h1></a>
+        <a class="navbar-brand" href="{{ url_for('route.home') }}"><h1>Windhover</h1></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto" align="right">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('route.home') }}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('books') }}">Books</a>
+                    <a class="nav-link" href="{{ url_for('route.books') }}">Books</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('members_page') }}">Members</a>
+                    <a class="nav-link" href="{{ url_for('route.members_page') }}">Members</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('manage_borrowing') }}">Borrowing</a>
+                    <a class="nav-link" href="{{ url_for('route.manage_borrowing') }}">Borrowing</a>
                 </li>
             </ul>
         </div>
