--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
     <div class="container">
         <h1>Welcome to the Windhover</h1>
         <p class="lead">Find your favorite books, join our lecture club, and more!</p>
-        <a href="{{ url_for('books') }}" class="btn btn-light btn-lg mt-3">Explore Now</a>
+        <a href="{{ url_for('route.books') }}" class="btn btn-light btn-lg mt-3">Explore Now</a>
     </div>
 </header>
 
@@ -19,17 +19,17 @@
         <div class="col-lg-4">
             <h2>Books</h2>
             <p>Add and check books available for borrowing. Search by title, author, and publisher.</p>
-            <a href="{{ url_for('books') }}" class="btn btn-primary">View Books</a>
+            <a href="{{ url_for('route.books') }}" class="btn btn-primary">View Books</a>
         </div>
         <div class="col-lg-4">
             <h2>Members</h2>
             <p>Manage membership, add new members, and access your borrowing history.</p>
-            <a href="{{ url_for('members_page') }}" class="btn btn-primary">View Members</a>
+            <a href="{{ url_for('route.members_page') }}" class="btn btn-primary">View Members</a>
         </div>
         <div class="col-lg-4">
             <h2>Borrowing</h2>
             <p>Note that renewal privileges are subject to change without notice.</p>
-            <a href="{{ url_for('manage_borrowing') }}" class="btn btn-primary">View Records</a>
+            <a href="{{ url_for('route.manage_borrowing') }}" class="btn btn-primary">View Records</a>
         </div>
     </div>
 </div>
