--- a/templates/home.html
+++ b/templates/home.html
@@ -18,17 +18,17 @@
     <div class="row">
         <div class="col-lg-4">
             <h2>Books</h2>
-            <p>Add and check books available for borrowing. Search by title, author, and publisher.</p>
+            <p>Add and check books available for borrowing. Search by title, author, publisher and year.</p>
             <a href="{{ url_for('route.books') }}" class="btn btn-primary">View Books</a>
         </div>
         <div class="col-lg-4">
             <h2>Members</h2>
-            <p>Manage membership, add new members, and access your borrowing history.</p>
+            <p>Manage membership, add new members, and access your members information.</p>
             <a href="{{ url_for('route.members_page') }}" class="btn btn-primary">View Members</a>
         </div>
         <div class="col-lg-4">
             <h2>Borrowing</h2>
-            <p>Loans may be renewed for an additional seven days, but only during the final week of the borrowing period.</p>
+            <p>The standard loan period is one month. Loans may be renewed for an additional seven days.</p>
             <a href="{{ url_for('route.manage_borrowing') }}" class="btn btn-primary">View Records</a>
         </div>
     </div>
