--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,26 @@
     </div>
 </div>
 
-<!-- Totals Section -->
+<!--Icons-->
+
+<div class="col-auto ">
+    <h2 class="text-center mb-4">Resources</h2>
+    <div class="icon-container">
+        <svg width="100" height="100" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Render</title>
+            <g fill="#000000">
+                <path d="M18.263.007c-3.121-.147-5.744 2.109-6.192 5.082-.018.138-.045.272-.067.405-.696 3.703-3.936 6.507-7.827 6.507-1.388 0-2.691-.356-3.825-.979a.2024.2024 0 0 0-.302.178V24H12v-8.999c0-1.656 1.338-3 2.987-3h2.988c3.382 0 6.103-2.817 5.97-6.244-.12-3.084-2.61-5.603-5.682-5.75"/>
+            </svg>
+        {% for icon in icons %}
+            <div class="icon" title="{{ icon.name }}">
+                <svg width="100" height="100" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" style="margin-bottom: 5px">
+                    <path d="{{ icon.path }}" fill="var(--icon-fill)">
+                </svg>
+            </div>
+        {% endfor %}
+    </div>
+</div>
+
+
 <div class="container my-5">
     <div class="row text-center">
         
@@ -100,5 +119,6 @@
         <path d="M9 16.2l-3.5-3.5L4 14l5 5 12-12-1.5-1.5z"></path>
     </symbol>
 </svg>
+
 
 {% endblock %}
